styles/sidebar.css
.sidebar_wrapper {
  max-width: 659px;
  width: 100%;
  height: 1080px;
  position: sticky;
  top: 0;
  display: flex;
  align-items: center;
}

.sidebar_content {
  padding-left: 139px;
}

.sidebar_form_wrapper {
  width: 380px;
}

.sidebar_dot {
  background-color: #FFFFFA;
  width: 3px;
  height: 3px;
  position: absolute;
}

.top_dot {
  left: 51px;
  top: 46px;
}

.bottom_dot {
  left: 51px;
  bottom: 46px;
}

.sidebar_sidetext {
  font-style: normal;
  font-weight: 600;
  font-size: 12px;
  line-height: 20px;
  letter-spacing: 6px;
  text-transform: uppercase;
  color: #FFFFFA;
  opacity: 0.4;
  writing-mode: vertical-lr;
  transform: rotate(180deg);
  right: 24px;
  position: absolute;
  margin: auto 0;
}

.sidetext_sm {
  display: none;
}


.sidebar_cross {
  cursor: pointer;
  position: relative;
  z-index: 1000;
}

.sidebar_title_container {
  margin-bottom: 60px;
}

.sidebar_title {
  font-weight: 600;
  font-size: 40px;
  line-height: 48px;
  text-transform: uppercase;
  background: linear-gradient(164.64deg, #6BC406 0%, #CBFF01 40.63%, #EC6D33 75.65%, #CA3D2D 104.63%);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  margin-bottom: 14px;
  background-clip: text;
}

.sidebar_subtitle {
  font-family: 'Cera Pro', sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 14px;
  line-height: 24px;
  color: #CBFF01;
  text-align: left;
}

.sidebar_form {
  display: flex;
  flex-direction: column;
  gap: 35px;
}

.sidebar_label {
  font-family: 'Cera Pro', sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 14px;
  line-height: 20px;
  color: #FFFFFA;
  opacity: 0.9;
  position: absolute;
  top: 0;
  left: 0;
  pointer-events: none;
  cursor: text;
  transition: 0.3s ease-in-out;
}

.sidebar_input_container {
  position: relative;
  width: 100%;
}

.sidebar_input {
  background-color: transparent;
  outline: none;
  border: none;
  border-bottom: 1px solid rgba(255,255,250, 0.16);
  font-family: 'Cera Pro', sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 14px;
  line-height: 20px;
  color: #FFFFFA;
  width: 100%;
  transition: 0.3s ease-in-out;
  padding: 0 0 5px 0;
}

 .error {
  border-bottom: 1px solid #EA4D50;
}

.sidebar_input:hover, .sidebar_input:focus {
  border-bottom: 1px solid #FFFFFA;
}

.sidebar_input:focus + label {
  font-size: 12px;
  line-height: 16px;
  top: -20px;
}

.sidebar_input:not(:placeholder-shown) + label {
  font-size: 12px;
  line-height: 16px;
  top: -20px;
  opacity: 1;
}

.sidebar_input:not(:placeholder-shown):not(:focus) + label {
  opacity: 0.5;
}

input::placeholder {
  opacity: 0;
}

textarea::placeholder {
  font-family: 'Cera Pro', sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 12px;
  line-height: 18px;
  color: #FFFFFA;
  opacity: 0.4;
}

textarea::-webkit-scrollbar {
  width: 3px;
}

textarea::-webkit-scrollbar-track {
  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
}

textarea::-webkit-scrollbar-thumb {
  background-color: transparent;
}

.textarea {
  resize: none;
  padding: 0 0 16px 0;
  outline: none;
}

.sidebar_textarea:hover,
.sidebar_textarea:focus {
  border-bottom: 1px solid #FFFFFA;
}

.sidebar_textarea_label {
  font-family: 'Cera Pro', sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 14px;
  line-height: 20px;
  color: #FFFFFA;
  opacity: 0.9;
}

.sidebar_button {
  font-weight: 700;
  font-size: 12px;
  line-height: 24px;
  text-transform: uppercase;
  padding: 10px 0;
  letter-spacing: 1px;
  color: #000000;
  background-color: #FFFFFA;
  cursor: pointer;
  width: 100%;
  max-width: 152px;
  border-style: none;
}

.sidebar_button:hover {
  background-color: #CBFF01;
}

.sidebar_break_md {
  display: block;
}

.error_message {
  position: relative;
  font-family: 'Cera Pro';
  font-style: normal;
  font-weight: 400;
  font-size: 11px;
  line-height: 16px;
  color: #EA4D50;
  float: right;
}

.sidebar_modal_header {
  display: none;
  width: 100%;
  align-items: center;
  justify-content: space-between;
  padding: 0 66px;
  height: 96px;
}

/* success  message*/
.sidebar_success {
  display: none;
  flex-direction: column;
  max-width: 380px;
}

.sidebar_success_logo {
  height: 80px;
  width: 80px;
  margin-bottom: 40px;
}

.sidebar_success_title {
  font-weight: 600;
  font-size: 40px;
  line-height: 48px;
  text-transform: uppercase;
  background: linear-gradient(137.64deg, #06C412 0%, #CBFF01 40.63%, #EC6D33 75.65%, #CA3D2D 104.63%);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  background-clip: text;
  text-fill-color: transparent;
  margin-bottom: 16px;
}

.sidebar_success_text {
  font-family: 'Cera Pro';
  font-style: normal;
  font-weight: 500;
  font-size: 14px;
  line-height: 24px;
  color: #CBFF01;
  margin-bottom: 40px;
}

.success_button {
  max-width: 92px;
  padding: 12px 0;
}


@media (max-width: 1681px) {
  .sidebar_wrapper {
    max-width: 573px;
    height: 900px;
  }

  .sidebar_content {
    padding-left: 120px;
  }

  .sidebar_form_wrapper {
    width: 330px;
  }
}

@media (max-width: 1440px) {
  .sidebar_wrapper {
    max-width: 450px;
    height: 768px;
  }

  .sidebar_form_wrapper {
    width: 293px;
  }

  .sidebar_content {
    padding-left: 78px;
  }

  .sidebar_sidetext {
    right: 16px;
  }

  .sidebar_success_title {
    font-size: 36px;
    line-height: 44px;
  }

  .sidebar_title_container {
    margin-bottom: 51px;
  }

  .sidebar_title {
    font-size: 36px;
    line-height: 44px;
  }

  .top_dot {
    top: 45px;
    left: 43px;
  }

  .bottom_dot {
    bottom: 21px;
    left: 43px;
  }

}

@media (max-width: 1250px) {
  .sidebar_wrapper {
    display: block;
    position: relative;
    max-width: 100%;
    height: 100%;
    transition: 0.3s ease-out;
    z-index: 10;
    background-color: #000;
  }

  .sidebar_content {
    height: 800px;
    position: relative;
    padding: 144px 0 144px 72px;
  }

  .sidebar_form {
    width: 428px;
  }

  .top_dot {
    left: 72px;
    top: 50px;
  }

  .bottom_dot {
    left: 72px;
    bottom: 50px;
  }

  .sidetext_lg {
    display: none;
  }

  .sidetext_sm {
    display: block;
  }

  .sidebar_sidetext {
    right: 70px;
    bottom: 80px;
  }

  .sidebar_title {
    font-size: 40px;
    line-height: 48px;
    width: 769px;
    background: linear-gradient(164.04deg, #06C412 10.93%, #CBFF01 41.39%, #EC6D33 67.65%, #CA3D2D 89.37%);
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
  }

  .sidebar_success {
    max-width: 730px;
  }

  .sidebar_title_container {
    margin-bottom: 58px;
  }

  .sidebar_break_md {
    display: inline;
  }

}

@media (max-width: 850px) {
  .sidebar_content {
    height: 765px;
    position: relative;
    padding: 104px 0 104px 48px;
  }

  .sidebar_form {
    width: 324px;
  }

  .sidebar_success {
    max-width: 470px;
  }

  .sidebar_modal_header {
    padding: 0 48px;
  }

  .sidebar_title {
    background:linear-gradient(164.65deg, #06C412 11.08%, #CBFF01 36.95%, #EC6D33 59.25%, #CA3D2D 77.7%);
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    max-width: 556px;
  }

  .top_dot {
    top: 42px;
    left: 48px;
  }

  .bottom_dot {
    bottom: 42px;
    left: 48px;
  }

  .sidebar_sidetext {
    right: 45px;
    bottom: 70px;
  }

  .sidebar_break_sm {
    display: block;
  }
}


@media (max-width: 560px) {
  .sidebar_content {
    height: 717px;
    position: relative;
    padding: 88px 0 88px 16px;
  }

  .sidebar_form {
    width: 324px;
  }

  .top_dot {
    top: 26px;
    left: 16px;
  }

  .bottom_dot {
    bottom: 26px;
    left: 16px;
  }

  .sidebar_sidetext {
    right: 15px;
    bottom: 112px;
    font-size: 9px;
    letter-spacing: 5px;
    line-height: 16px;
  }

  .sidebar_title {
    font-size: 32px;
    line-height: 40px;
    max-width: 320px;
    background: linear-gradient(164.04deg, #06C412 10.93%, #CBFF01 41.39%, #EC6D33 67.65%, #CA3D2D 89.37%);
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
  }

  .sidebar_success_title {
    font-size: 32px;
    line-height: 40px;
    max-width: 300px;
  }

  .sidebar_success {
    max-width: 350px;
  }

  .sidebar_modal_header {
    padding: 0 16px;
    height: 56px;
  }

  .sidebar_cross {
    height: 13px;
    width: 13px;
  }

  .sidebar_break_md {
    display: block;
  }

  .sidebar_break_sm {
    display: inline;
  }
}

@media (max-width: 390px) {
  .sidebar_form {
    width: 295px;
  }
}

@media (max-width: 360px) {
  .sidebar_form {
    width: 250px;
  }
}

